# csv_comparer

./: .bandit.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  setup.cfg
comparer/: __init__.py  __main__.py  app.py  cli.py  service.py  templates.py  utils.py
comparer/adapters/: blob_repository.py  disk_repository.py
comparer/app/: __init__.py
comparer/app_functions/: __init__.py  basic_statistics.py  show_difference.py  visualize.py
comparer/domain/: utils.py
comparer/ports/: cli.py
comparer/service/: __init__.py
comparer/storage_repos/: blob_repository.py  disk_repository.py
tests/: __init__.py  test_file_repo.py
tests/data/: bottom_tables_cerebre.csv  bottom_tables_cerebre2.csv
