[tool.poetry]
name = "csv-comparer"
version = "0.0.1"
description = "Service for comparing csv files"
authors = ["Daniel Kozłowski <dkozlowski@cerebre.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pathlib = "^1.0.1"
isort = "^5.10.1"
argparse = "^1.4.0"
pandas = "^1.4.2"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"
autoflake = "^1.4"
